Small fix for z-index.

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -31,4 +31,5 @@ body.agente form#new_propiedad #propiedad_admin_id_field {
   width: 100%;
   background-color: lightgreen;
   padding: 5px;
+  z-index: 1000;
 }
